Fixed z-index of Websites by Hannah link

--- a/src/index.css
+++ b/src/index.css
@@ -524,6 +524,7 @@ a {
 
 .footer a {
   text-decoration: underline;
+  z-index: 10;
 }
 
 .bag-icon-container {
